Added working modals to auth events
Modals pop up for sign up, sign in, and change password (not sign out).
Modals all currently work.
Also added a background image but commented out for development.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,22 @@
 @import '~bootstrap/scss/bootstrap';
+@import './variables.scss';
+
+body {
+  background-attachment: fixed;
+  // background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Gloomy_Forest.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  font-family: $font;
+}
+
+.change-password {
+  display: none;
+}
+
+.sign-out {
+  display: none;
+}
+
+.title {
+  text-align: center;
+}
