Fixed auth forms so they clear, added styling
Made sign up/sign in only available to unauthenticated users.
Sign up/sign in/change password forms clear upon success and failure.
Made change password/sign out only available to authenticated users.
Tried to fix issue with create encounter form, it now clears but still
doesn't create an encounter.
Fixed bootstrap column widths and changed div background color for
better visibility between elements.

--- a/assets/scripts/templates/encounters.handlebars
+++ b/assets/scripts/templates/encounters.handlebars
@@ -4,6 +4,7 @@
    {{#each encounters as |encounter|}}
      <div>
        <div>
+         Encounter ID: {{encounter.id}} </br>
          {{encounter.entity_type}} was seen on {{encounter.date_of_encounter}} {{encounter.time_of_encounter}} at {{encounter.location}}.</br>
          Weather: {{encounter.weather}}</br>
          Number of People Present: {{encounter.number_of_people}}</br>
