Fixed crud resource actions (except update)
Delete, getting all, and finding one resource now works.
Made new handlebars file to hold getEncounter display template.
Made all modals disappear upon success/failure.
Moved all user messages to the same place.
Made a form for update, currently does not successfully update.

--- a/assets/scripts/templates/showEncounter.handlebars
+++ b/assets/scripts/templates/showEncounter.handlebars
@@ -1,7 +1,6 @@
-<div class="Encounters">
-   <h2>Encounters: </h2>
-   <ul id="encounters">
-   {{#each encounters as |encounter|}}
+<div class="encounter">
+   <h2>Encounter: </h2>
+   <ul id="encounter">
      <div>
        <div>
          Encounter ID: {{encounter.id}} </br>
@@ -15,6 +14,5 @@
       </div>
       <br>
      </div>
-   {{/each}}
    </ul>
 </div>
