--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import './variables.scss';
 
+a[href^="https"] {
+  color: inherit;
+}
+
 body {
   background-attachment: fixed;
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Gloomy_Forest.jpg');
