--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,7 +7,7 @@ a[href^="https"] {
 
 body {
   background-attachment: fixed;
-  background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Gloomy_Forest.jpg');
+  background: url('public/Haunted-Forest.jpg');
   background-position: center;
   background-repeat: no-repeat;
   color: white;
